finish for level 4 of todo app

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <div>끝남</div>
         </div>
         <div id="task-board">
-          <div class="task">
+          <!-- <div class="task">
             <div></div>
             <div>
               <button>check</button>
               <button>delete</button>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </div>
