--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="container">
       <h1>Todo List</h1>
       <section class="input-area">
-        <input type="text" id="task-input" />
+        <input type="text" id="task-input" onfocus="this.value='';" onkeyup="enterkey()"/>
         <button id="add-bttn">+</button>
       </section>
 
       <section class="task-area">
-        <div id="under-line"></div>
         <div class="task-tabs">
-          <div>모두</div>
-          <div>진행중</div>
-          <div>끝남</div>
+          <div id="under-line"></div>
+          <div id="all">모두</div>
+          <div id="ongoing">진행중</div>
+          <div id="done">끝남</div>
         </div>
         <div id="task-board">
           <!-- <div class="task">
